[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name =  "dbt-graph-builder"
readme = "README.md"
description = "A package to build a graph from dbt models"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
spark = [
    "pyspark>=3.0.0"
]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-github-actions-annotate-failures",
]

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts"]
number = 4
recursive = true
targets = "src"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",
    "D100",  # public module
    "D104",  # public package
    "D105",  # magic methods
    "DCO010", # duplicate of public method
    "DCO060", # public attributes - they're already documented if it is a property.
]
exclude = ["build", "tests"]

[tool.mypy]
packages = ["src"]
exclude = ["tests"]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-vv", "-s"]
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]
